HW3/javali_tests/others/new/HW3_MarLin/type_error/binary_op/ErrArithmeticBinOp2.javali
class Main {

   void main() {
      int i;
      boolean b;
      b = true;
      i = 1;
      i = i + b;
   }
}
